<resources>
    <string name="app_name">Telemed_Alz</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Hasło</string>
    <string name="signup_login_hint">Już masz konto? Zaloguj się</string>
    <string name="login_signup_hint">Nie masz jeszcz konta? Zarejestruj się</string>
    <string name="login_name_hint">Imię</string>
    <string name="login_age_hint">Wiek użytkownika</string>
    <string name="title_activity_settings">Alzheimerek</string>
    <string name="messages_header">Wiadomość</string>
    <string name="signature_title">Podpis</string>
    <string name="reply_title">Odpowiedź</string>
    <string name="sync_header">Synchronizacja</string>
    <string name="sync_title">Synchronizuje…</string>
    <string name="attachment_summary_off">Wyłącz opis załącznika</string>
    <string name="attachment_title">Załącznik</string>
    <string name="attachment_summary_on">Włączono opis załącznika</string>
    <string name="logowanie">Logowanie</string>
    <string name="has_o">Hasło</string>
    <string name="zaloguj_si">ZALOGUJ SIĘ</string>
    <string name="panel_opiekuna">Panel opiekuna</string>
    <string name="todo">TODO</string>
    <string name="podopieczni">Podopieczni</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="status_zada">Status zadań</string>
    <string name="poradnik_opiekuna">Poradnik opiekuna</string>
    <string name="dodaj_podopiecznego">Dodaj podpiecznego</string>
    <string name="dodaj_zadanie">Dodaj zadanie</string>
    <string name="powr_t">POWRÓT</string>
    <string name="panel_roboczy">Panel roboczy</string>
    <string name="konto_opiekuna">Konto opiekuna</string>
    <string name="hello">Hello</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="zarejestruj_si">Zarejestruj się</string>
    <string name="settings">Ustawienia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="enter_your_email">Enter Your Email .....</string>
    <string name="enter_your_pass">Enter Your Password .....</string>
    <string name="re_enter_your_pass">Re-enter Your Password .....</string>
    <string name="type_your_task">Type your task .....</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered_yet">Not Registered Yet ??</string>
    <string name="already_registered">Already Registered !!</string>
    <string name="item_1">Item 1</string>
    <string name="dobrze">DOBRZE</string>
    <string name="zm_czony">ZMĘCZONY</string>
    <string name="le">ŹLE</string>
    <string name="jak_dzisiaj_si_czujesz">Jak dzisiaj się czujesz?</string>
    <string name="rednio">ŚREDNIO</string>
    <string name="wprowad_email">Wprowadź email:</string>
    <string name="wpisz_has_o">Wpisz hasło:</string>
    <string name="witaj">Witaj ponownie!</string>
    <string name="yyyy_mm_dd">YYYY-mm-dd</string>
</resources>